Fixed menus on mobile phones on user and party pages.

--- a/src/main/webapp/app/css/app.css
+++ b/src/main/webapp/app/css/app.css
@@ -69,8 +69,10 @@ label {
 .color15 { background-color: #E6A465; }
 .color16 { background-color: #E665A8; }
 
-.mobile-nav {
+.mobile-navbar {
     font-size: 0.75em;
+    margin-left: -20px;
+    margin-right: -20px;
 }
 
 .navbar {
